<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Conversaciones"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayoutArriba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="@drawable/linearlayout_arriba_conversaciones">

        <ImageView
            android:id="@+id/atras"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/atras"
            android:contentDescription="@string/atras" />


        <ImageView
            android:id="@+id/imagen"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:src="@drawable/maria"
            android:contentDescription="@string/maria" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/maria"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@drawable/textview_nombre_conversaciones" />

    </LinearLayout> <!-- LinearLayoutArriba -->


    <LinearLayout
        android:id="@+id/LinearLayoutChats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingBottom= "10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mesanje1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/textview_otros_mensajes_conversaciones"
                    android:text="@string/mensaje1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mesanje2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje2"
                    android:background="@drawable/textview_otros_mensajes_conversaciones"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mesanje3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje3"
                    android:background="@drawable/textview_tus_mensajes_conversaciones"
                    android:textSize="18sp"
                    android:layout_gravity="end"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/mesanje4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje4"
                    android:background="@drawable/textview_tus_mensajes_conversaciones"
                    android:layout_gravity="end"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/mesanje5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje5"
                    android:background="@drawable/textview_otros_mensajes_conversaciones"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mesanje6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje6"
                    android:background="@drawable/textview_otros_mensajes_conversaciones"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mesanje7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje7"
                    android:background="@drawable/textview_otros_mensajes_conversaciones"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mesanje8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje8"
                    android:background="@drawable/textview_tus_mensajes_conversaciones"
                    android:layout_gravity="end"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/mesanje9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje9"
                    android:background="@drawable/textview_otros_mensajes_conversaciones"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mesanje10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje10"
                    android:background="@drawable/textview_otros_mensajes_conversaciones"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mesanje11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje11"
                    android:background="@drawable/textview_otros_mensajes_conversaciones"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mesanje12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje12"
                    android:background="@drawable/textview_tus_mensajes_conversaciones"
                    android:layout_gravity="end"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/mesanje13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/mensaje13"
                    android:background="@drawable/textview_otros_mensajes_conversaciones"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout> <!-- Chat -->

    <LinearLayout
        android:id="@+id/LinearLayoutAbajo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/Mensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_mensaje_conversaciones"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/mensaje"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/archivos"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/clip"
                android:contentDescription="@string/clip" />

            <ImageView
                android:id="@+id/foto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/camara"
                android:contentDescription="@string/camara" />
        </LinearLayout> <!-- Mensaje -->

        <ImageView
            android:id="@+id/audio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/audio"
            android:contentDescription="@string/audio" />

    </LinearLayout> <!-- LinearLayoutAbajo -->


</LinearLayout>