<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCFA"
    android:backgroundTint="#8BDCF6"
    android:gravity="center"
    android:padding="16dp">


    <androidx.cardview.widget.CardView
        android:layout_width="345dp"
        android:layout_height="664dp"
        android:layout_gravity="center"
        android:padding="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="12dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="113dp"
                android:layout_height="118dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.029"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo" />

            <EditText
                android:id="@+id/Nombre"
                android:layout_width="314dp"
                android:layout_height="54dp"
                android:background="@drawable/fondo_edittext"
                android:backgroundTint="#F5F5F5"
                android:hint="@string/nombre"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.232"
                android:autofillHints="" />


            <EditText
                android:id="@+id/Apellidos"
                android:layout_width="314dp"
                android:layout_height="54dp"
                android:background="@drawable/fondo_edittext"
                android:backgroundTint="#F5F5F5"
                android:hint="@string/apellidos"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.337"
                android:autofillHints="" />


            <EditText
                android:id="@+id/edad"
                android:layout_width="314dp"
                android:layout_height="54dp"
                android:background="@drawable/fondo_edittext"
                android:backgroundTint="#F5F5F5"
                android:hint="@string/fecha_de_nacimiento"
                android:inputType="datetime"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.447"
                android:autofillHints="" />

            <TextView
                android:id="@+id/generotexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genero"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.056"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.626" />

            <Button
                android:id="@+id/siguiente"
                android:layout_width="174dp"
                android:layout_height="67dp"
                android:backgroundTint="@color/blue"
                android:text="@string/siguiente"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.953" />

            <RadioGroup
                android:id="@+id/grupogenero"
                android:layout_width="285dp"
                android:layout_height="57dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7">

                <RadioButton
                    android:id="@+id/masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino" />

                <RadioButton
                    android:id="@+id/femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/femenino" />

                <RadioButton
                    android:id="@+id/otro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/otro" />
            </RadioGroup>

            <TextView
                android:id="@+id/gustostexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gustos"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.056"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.753" />

            <LinearLayout
                android:id="@+id/grupo"
                android:layout_width="180dp"
                android:layout_height="61dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.838">

                <CheckBox
                    android:id="@+id/chicas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chicas" />

                <CheckBox
                    android:id="@+id/chicos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/chicos" />
            </LinearLayout>

            <Spinner
                android:id="@+id/pais"
                android:layout_width="314dp"
                android:layout_height="54dp"
                android:layout_marginTop="76dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/fondo_edittext"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.49" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
